tests/errors/_questions/generated_errors/int_op_for_float/int_op_for_float.c
int main()
{
	float a; 
	int b;
	a = 6.1;
	b = a >> 1;
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}